syntax = "proto3";

package auth;
option java_package = "com.habitsystem.proto.auth";
option java_multiple_files = true;

service AuthService {
  rpc Authenticate (AuthRequest) returns (AuthResponse) {}
  rpc ValidateAuth (ValidateAuthRequest) returns (ValidateAuthResponse) {}
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string refresh_token = 2;
  string user_id = 3;
  string username = 4;
  int64 expires_in = 5;
  string token_type = 6;
}

message ValidateAuthRequest {
  string token = 1;
}

message ValidateAuthResponse {
  bool valid = 1;
  string user_id = 2;
  string username = 3;
}
